# rust_kafka

./: Cargo.toml
src/: kafka.rs  main.rs  router.rs  state.rs
