[package]
name = "rust_kafka"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.202"
serde_json = "1.0.117"
sea-orm = { version = "^0.12.0", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
thiserror = "1.0.60"
rdkafka = "0.36.2"
futures = "0.3.30"
pretty_env_logger = "0.5.0"
tracing = "0.1.40"
axum = "0.7.5"
tokio = "1.37.0"
